# Youbot-RVO

./: .#.gitignore  .gitignore  .gitignore~  README.md  README.md~
HRVO/: CMakeLists.txt
HRVO/doc/: footer.html
HRVO/examples/: CMakeLists.txt  Circle.cpp
HRVO/src/: Agent.cpp  Agent.h  CMakeLists.txt  Definitions.h  KdTree.cpp  KdTree.h  Simulator.cpp  Simulator.h  Vector2.h
Matlab/: AgentPlotter.m  log1.csv  log2.csv
PTrackingBridge/: CMakeLists.txt
PTrackingBridge/launch/: PTrackingBridge.launch
PTrackingBridge/msg/: TargetEstimations.msg
PTrackingBridge/src/: PTrackingBridge.cpp  UdpSocket.h
Resources/Matlab/: LogPlotter.m  PTracker-Kinect_1.xml  PersonWalk1.csv  PersonWalk2.csv  PersonWalk3.csv  PersonWalk4.csv  XmlPlotter.m  YoubotPlanner1.csv  YoubotPlanner2.csv  YoubotPlanner3.csv  YoubotRemote1.csv  YoubotRemote10(6GoalHist).csv  YoubotRemote11.csv  YoubotRemote12(BigAcc-MagnFix).csv  YoubotRemote13.csv  YoubotRemote2.csv  YoubotRemote3.csv  YoubotRemote6.csv  (+7 more)
V-REP/: youBotTest.ttt
agents_dispatcher/: CMakeLists.txt  README.md  package.xml
hrvo/: CMakeLists.txt  COPYING  CTestConfig.cmake  hrvo.sublime-project  package.xml
hrvo/cfg/: console.yaml  constants.yaml  experiment.yaml  logger.yaml  model.yaml  robot.yaml  simulation.yaml  workspace.yaml
hrvo/launch/: Experiment.launch  youbot_exp.launch
hrvo/src/: AMCLWrapper.cpp  AMCLWrapper.h  Agent.cpp  Agent.h  BumperWrapper.cpp  BumperWrapper.h  Circle.cpp  Defines.h  Definitions.cpp  Definitions.h  Environment.cpp  Environment.h  Experiment.cpp  Experiment.h  Goal.cpp  Goal.h  HRVO.h  KdTree.cpp  KdTree.h  Model.cpp  Model.h  Parameter.cpp  Parameter.h  Planner.cpp  Planner.h  RobotComms.cpp  RobotComms.h  Simulator.cpp  Simulator.h  Square.cpp  Tracker.cpp  Tracker.h  Vector2.cpp  Vector2.h
hrvo/srv/: AddAgentService.srv
launch/: PTrackingBridge.launch
ptracking_wrapper/: CMakeLists.txt  README.md  package.xml
workspace/src/PTrackingBridge/: CMakeLists.txt  package.xml
workspace/src/PTrackingBridge/msg/: TargetEstimations.msg
workspace/src/PTrackingBridge/src/: PTrackingBridge.h  SocketAddress.h
(+24 files in other folders)
