<?xml version="1.0"?>
<package>
  <name>hrvo</name>
  <version>1.1.0</version>
  <description>The Youbot RVO package</description>

  <maintainer email="alex.bordallo@gmail.com">Alejandro Bordallo</maintainer>

  <license>BSD</license>

  <url type="website">http://github.com/ipab-rad/Youbot-RVO</url>

  <author email="jane.doe@example.com">Alejandro Bordallo</author>
  <author email="previtali@dis.uniroma1.it">Fabio Previtali</author>
  <author email="n.nardelli@sms.ed.ac.uk">Nantas Nardelli</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>PTrackingBridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>PTrackingBridge</run_depend>

  <export>
  </export>

</package>
